--- a/Styles/MobileAppStyle.css
+++ b/Styles/MobileAppStyle.css
@@ -102,14 +102,14 @@
 
 
 /*---------------Css For dl------------*/
-.dlist dt { font-weight:bold; font-size:12px; line-height:18px;color:#737373;}
-.dlist dd { font-size:12px; color:#737373; line-height:17px;margin: auto auto auto 0px;}
+.dlist dt {font-size:13px; line-height:18px;color:Black; font-family:Arial; font-weight:100}
+.dlist dd { font-size:12px; color:black line-height:17px;margin: auto auto auto 0px; border-bottom:1px solid; border-bottom-color:#e5eaf1;}
 
 
 .marginChannel {margin: 0 1% 10px 0; float: right; }
 
-.overflowTwoDivs {overflow-x:hidden; height:50%;}
-.overflowOneDiv {overflow-x:hidden; height:100%;}
+.overflowTwoDivs {overflow-x:hidden; height:25%; margin-top:10px;}
+.overflowOneDiv {overflow-x:hidden; height:100%; width:96%;}
 .schoolsList {text-align: center;margin: 105px auto 0 auto;font-size: 15px;border: 1px solid black;width: 500px;padding: 5px;background-color: #c7c7c7;}
 .ulGallery {}
 .ulGallery li {margin:0px auto 0px 36%;}
