--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 .input-text
@@ -12,23 +12,28 @@
 
 .submit-btn
 {
-   	margin:4% auto 0px 1%; float:left; width:96%; height:40px;
+   	/*margin:4% auto 0px 1%; float:left; width:96%; height:40px;
 	background:#1b9dba;
 	border:1px solid #1C6C7A;
 	box-shadow:0 1px 6px 4px rgba(0, 0, 0, 0.07) inset, 0 0 0 3px #FEFEFE, 0 5px 3px 3px #D2D2D2;
-	border-radius:3px;
+	border-radius:3px;*/
+    background:url('../images/signButton.png') no-repeat;
+    float:right;
+    margin:10px 10px 0px 0px;
+    width:110px;
+    height:40px;
 }
 .submit-btn:hover 
 {
-	margin:4% auto 0px 1%; float:left;  width:96%; height:40px;
+	/*margin:4% auto 0px 1%; float:left;  width:96%; height:40px;
 	background:#17bfe5;
 	border:1px solid #1C6C7A;
 	box-shadow:0 1px 6px 4px rgba(0, 0, 0, 0.07) inset, 0 0 0 3px #FEFEFE, 0 5px 3px 3px #D2D2D2;
-	border-radius:3px;
+	border-radius:3px;*/
 }
 
 
-.schoolsList {text-align: center;margin: 105px auto 0 auto;font-size: 15px;border: 1px solid black;width: 95%;padding: 5px;background-color: #3b5998;color:White;}
+.schoolsList {text-align: center;margin: 60px auto 0 auto;font-size: 15px;width: 95%;padding: 5px;}
 
 #dvLoading
 {
@@ -37,8 +42,8 @@
    width: 100px;
    position: fixed;
    z-index: 1000;
-   left: 50%;
-   top: 50%;
+   left: 40%;
+   top: 40%;
    margin: -25px 0 0 -25px;
    filter: alpha(opacity=70);
     opacity: 0.7;
