--- a/Styles/MobileAppStyle.css
+++ b/Styles/MobileAppStyle.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 .container
@@ -100,7 +100,10 @@
 .formSet input[type="submit"] { display:block; }
 .overflow_height { min-height:405px; overflow-y: auto; overflow-x:hidden;}
 
-
+#divChannels .cbChannels
+{
+    
+}
 /*---------------Css For dl------------*/
 .dlist dt {font-size:13px; line-height:18px;color:Black; font-family:Arial; font-weight:100}
 .dlist dd { font-size:12px; color:black line-height:17px;margin: auto auto auto 0px; border-bottom:1px solid; border-bottom-color:#e5eaf1;}
@@ -113,3 +116,26 @@
 .schoolsList {text-align: center;margin: 105px auto 0 auto;font-size: 15px;border: 1px solid black;width: 500px;padding: 5px;background-color: #c7c7c7;}
 .ulGallery {}
 .ulGallery li {margin:0px auto 0px 36%;}
+.view-btn{
+ padding:15px 50px;
+ font:16px Arial, Helvetica, sans-serif;
+ text-align:center;
+ color:#FFF;
+ background:#17a1e9;
+ margin:10px 15px 0px 0px;
+ -moz-border-radius:5px;
+ -webkit-border-radius:5px;
+ border-radius:5px;
+ moz-transition: all 0.4s ease-in-out;
+ -o-transition: all 0.4s ease-in-out;
+ -ms-transition: all 0.4s ease-in-out;
+ transition: all 0.4s ease-in-out;
+}
+.view-btn:hover{
+ cursor:pointer;
+ background:#0d8fd2;
+ moz-transition: all 0.4s ease-in-out;
+ -o-transition: all 0.4s ease-in-out;
+ -ms-transition: all 0.4s ease-in-out;
+ transition: all 0.4s ease-in-out;
+}
